Update Intro & Data section

--- a/Project_Notebook.ipynb
+++ b/Project_Notebook.ipynb
@@ -31,7 +31,13 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "In this project, I'll analyze each neighborhood in San Francisco and try to find a relationship between **San Francisco Housing Sales Price** and **nearby venues**. \n",
+    "\n",
+    "Specifically, this report will be targeted to stakeholders interested in investing a **real estate in San Francisco**, helping them to choose the regions with their favorite venues or lower real estate costs.\n",
+    "\n",
+    "I'll create a map with each neighborhood in San Francisco segmented and clustered according to housing sales prices and nearby venues."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -43,7 +49,12 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "In consider of our problem, I found following data sets:\n",
+    "* I found **Median Value Per Squre foot** data of each neighborhood in San Francisco, from Apr 1996 to Jul 2019. The csv file contains the **Region Name, City, CountyName, SizeRank and median_value_per_sqft** during this time period in USD.\n",
+    "* I used **Forsquare API** to get the most common venues of given neighborhood of San Francisco.\n",
+    "* I used **Google Maps API geocoding** to get the center cooridnates of each neighborhood."
+   ]
   },
   {
    "cell_type": "markdown",
